--- a/exa.htm
+++ b/exa.htm
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <div class="container text-center">
+  <div class="container"background:url()>
     <div style="z-index:2;">
     <img src="image_homebanner@1x.png"class="img-responsive">
   </div>
