--- a/exa3.html
+++ b/exa3.html
@@ -20,6 +20,7 @@
         border-bottom-style: solid;
         border-bottom-color: #D1D1D1;
 }
+.textbody{font-family: proxima nova light;font-size: 22px;color: #a9a8ac;}
        .headmenus {color:#A8A9AC;
              font-family: Proxima nova light;
              font-size: 18px;}
@@ -36,7 +37,8 @@
                    width: 170px;
                   border-radius: 50%;
                   background-color: red;} 
-            .rec{height:70px;width: 440px;background: red;}
+            .rec{height:70px;width: 445px;background: red;}
+            .rec1{height:1px;width: 445px;background: red;}
         .triang {
                width: 0; 
                height: 0; 
@@ -45,7 +47,9 @@
                 border-top: 26px solid #f00;
                 }
          .zindex {
-    position: absolute;
+   
+    text-align: center;
+    margin: 0 auto;
 
     
     z-index: 1;
@@ -190,36 +194,147 @@
 </div>
 
 
-<div class="row">
-<div class="col-lg-4 text-center">
+<!--div class="row">
+<div class="col-lg-4  text-center"style="padding-right:0px;padding-left:0px;padding-top:0px;">
 <div class="rec"></div>
 
 <center>
 
+<div class="triang zindex text-center"style="vertical-align:middle;text-align:center;"></div>
+</center>
+<div class="image">
+<img class="img-responsive" src="image_homevideo1@3x.png">
+</div>
+<div class="rec1"></div>
+</div>
+
+
+<div class="col-lg-4 text-center"style="padding-right:0px;padding-left:0px;">
+
+<div class="rec"></div>
+<center>
 <div class="triang zindex"style="vertical-align:middle;text-align:center;"></div>
 </center>
 <div class="image">
-<img class="img-responsive" src="image_homevideo1@1x.png"width="480"height="450">
+<img class="img-responsive"style="padding-right:0px;padding-left:0px;" src="image_homevideo1@1x.png">
 </div>
+<div class="rec1"></div>
 </div>
 
 
-<div class="col-lg-4 text-center">
-
+<div class="col-lg-4 text-center"style="padding-right:0px;padding-left:0px;">
 <div class="rec"></div>
 <center>
-<div class="triang"style="vertical-align:middle;text-align:center;"></div>
+<div class="triang zindex"style="vertical-align:middle;text-align:center;"></div>
 </center>
+<div class="image">
+<img class="img-responsive" src="image_homevideo1@1x.png"style="padding-right:0px;padding-left:0px;">
+</div>
+<div class="rec1"></div>
+</div>
+</div-->
+<!--div class="row">
+<div class="col-lg-12 col-sm-12 col-md-12"style="padding-right:0px;padding-left:0px;">
+<div class="row">
+<div class="col-lg-4 col-sm-4 col-md-4"style="background-color:red;"style="padding-right:0px;padding-left:0px;">
+<center><h3>title here</h3></center>
+</div>
+<div style="background-image:url(image_homevideo1@1x.png);"style="padding-right:0px;padding-left:0px;">
+<div class="image text-center"style="padding-right:0px;padding-left:0px;">
+<img src="icon_playbutton1@1x.png"class="img-responsive">
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-4 col-md-4"style="background-color:blue;">
+<center><h3>title here</h3></center>
+</div>
+<div class="col-lg-4 col-sm-4 col-md-4 "style="background-color:green;">
+<center><h3>title here</h3></center>
+</div>
 </div>
 
 
-<div class="col-lg-4 text-center">
-<div class="rec"></div>
-<center>
-<div class="triang"style="vertical-align:middle;text-align:center;"></div>
-</center>
+<div class="row">
+<div class="col-lg-4" style="background-image:url(image_homevideo1@1x.png);">
+<div class="image text-center">
+<img src="icon_playbutton1@1x.png"class="img-responsive">
 </div>
 </div>
+
+<div class="col-lg-4" style="background-image:url(image_homevideo2@1x.png);no-repeat;">
+<div class="row">
+<div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-4">
+<img src="icon_playbutton1@1x.png"class="img-responsive">
+</div>
+</div>
+</div>
+
+<div class="col-lg-4" style="background-image:url(image_homevideo3@1x.png);">
+<img src="icon_playbutton1@1x.png"class="img-responsive">
+</div>
+</div>
+</div>
+</div-->
+<div class="row">
+  <div class="col-lg-4 col-sm-4 col-md-4">
+   <div class="row">
+     <div style="background-color:red;"style="padding-right:0px;padding-left:0px;">
+     <center><br><font class="textbody">Title here</font></center><br>
+     </div>
+   </div>
+   <div class="row">
+    <div style="background-image:url(image_homevideo1@1x.png);">
+      <div class="image text-center  col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4">
+        <img src="icon_playbutton1@1x.png"class="img-responsive">
+      </div>
+    </div>
+   </div>
+    <div class="row">
+     <div style="background-color:red;"style="padding-right:0px;padding-left:0px;">
+     <center><br><font class="textbody">sdflsld ksldkf klskdf lsdkfj lskdfjl sdjf ksdf sdflsld ksldkf klskdf lsdkfj lskdfjl sdjf ksdf</font></center><br>
+     </div>
+   </div>
+  </div>
+  <div class="col-lg-4 col-sm-4 col-md-4">
+   <div class="row">
+     <div style="background-color:blue;"style="padding-right:0px;padding-left:0px;">
+     <center><br><font class="textbody">Title here</font></center><br>
+     </div>
+   </div>
+   <div class="row">
+    <div style="background-image:url(image_homevideo2@1x.png);">
+      <div class="image text-center col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4">
+        <img src="icon_playbutton1@1x.png"class="img-responsive">
+      </div>
+    </div>
+   </div>
+    <div class="row">
+     <div style="background-color:blue;"style="padding-right:0px;padding-left:0px;">
+     <center><br><font class="textbody">sdflsld ksldkf klskdf lsdkfj lskdfjl sdjf ksdf sdflsld ksldkf klskdf lsdkfj lskdfjl sdjf ksdf</font></center><br>
+     </div>
+   </div>
+  </div>
+  <div class="col-lg-4 col-sm-4 col-md-4">
+   <div class="row">
+     <div style="background-color:green;"style="padding-right:0px;padding-left:0px;">
+     <center><br><font class="textbody">Title here</font></center><br>
+     </div>
+   </div>
+   <div class="row"style="padding-top:0px;">
+    <div style="background-image:url(image_homevideo3@1x.png);">
+      <div class="image text-center col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4"style="background-repeat:no-repeat;background-position:center;">
+        <img src="icon_playbutton1@1x.png"class="img-responsive">
+      </div>
+    </div>
+   </div>
+    <div class="row">
+     <div style="background-color:green;"style="padding-right:0px;padding-left:0px;">
+     <center><br><font class="textbody">sdflsld ksldkf klskdf lsdkfj lskdfjl sdjf ksdf sdflsld ksldkf klskdf lsdkfj lskdfjl sdjf ksdf</font></center><br>
+     </div>
+   </div>
+  </div>
+</div>
+
 
 
 
