--- a/exa3.html
+++ b/exa3.html
@@ -278,7 +278,7 @@
 <div class="row">
   <div class="col-lg-4 col-sm-4 col-md-4">
    <div class="row">
-     <div style="background-color:red;"style="padding-right:0px;padding-left:0px;">
+     <div style="background-color:red;"style="padding-right:0px;padding-left:0px;"height="70">
      <center><br><font class="textbody">Title here</font></center><br>
      </div>
    </div>
