--- a/exa3.html
+++ b/exa3.html
@@ -278,14 +278,14 @@
 <div class="row">
   <div class="col-lg-4 col-sm-4 col-md-4">
    <div class="row">
-     <div style="background-color:red;"style="padding-right:0px;padding-left:0px;"height="70">
+     <div style="background-color:red;"style="padding-right:0px;padding-left:0px;">
      <center><br><font class="textbody">Title here</font></center><br>
      </div>
    </div>
    <div class="row">
     <div style="background-image:url(image_homevideo1@1x.png);">
-      <div class="image text-center  col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4">
-        <img src="icon_playbutton1@1x.png"class="img-responsive">
+      <div class="image text-center  col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4"style="padding-left:30px;">
+        <img src="icon_playbutton1@1x.png"class="img-responsive"style="padding-top:150px;padding-bottom:150px;">
       </div>
     </div>
    </div>
@@ -303,8 +303,8 @@
    </div>
    <div class="row">
     <div style="background-image:url(image_homevideo2@1x.png);">
-      <div class="image text-center col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4">
-        <img src="icon_playbutton1@1x.png"class="img-responsive">
+      <div class="image text-center col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4"style="padding-left:30px;">
+        <img src="icon_playbutton1@1x.png"class="img-responsive"style="padding-top:150px;padding-bottom:150px;">
       </div>
     </div>
    </div>
@@ -321,9 +321,9 @@
      </div>
    </div>
    <div class="row"style="padding-top:0px;">
-    <div style="background-image:url(image_homevideo3@1x.png);">
-      <div class="image text-center col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4"style="background-repeat:no-repeat;background-position:center;">
-        <img src="icon_playbutton1@1x.png"class="img-responsive">
+    <div class="img-responsive"style="background-image:url(image_homevideo3@1x.png);"style="background-repeat:no-repeat;">
+      <div class="image text-center col-sm-offset-4 col-xs-offset-4 col-md-offset-4 col-lg-offset-4"style="padding-left:30px;"">
+        <img src="icon_playbutton1@1x.png"class="img-responsive"style="padding-top:150px;padding-bottom:150px;">
       </div>
     </div>
    </div>
