--- a/exa1.html
+++ b/exa1.html
@@ -1,53 +1,15 @@
 <html>
-<body >
-	<head>
-      <title>Bootstrap 101 Template</title>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Bootstrap -->
-       <link href="css/bootstrap.min.css" rel="stylesheet">
-      <script src="js/jquery.js"></script>
-     
-      <script src="js/bootstrap.min.js"></script>
-</body>
-<ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-<div class="container">
-	<div class="btn-group btn-group-lg">
-<button type="button" class="btn btn-primary">samsung</button>
-<button type="button" class="btn btn-primary">iphone</button>
-
- </div>
-</div>
-<div class="panel-group" id="accordion">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" 
-          href="#collapseOne">
-          Click me to exapand. Click me again to collapse.Section 1
-        </a>
-      </h4>
-    </div>
-    <div id="collapseOne" class="panel-collapse collapse in">
-      <div class="panel-body">
-        Nihil anim keffiyeh helvetica, craft beer labore wes anderson 
-        cred nesciunt sapiente ea proident. Ad vegan excepteur butcher 
-        vice lomo.
-      </div>
-    </div>
-  </div>
-  </div>     
+<head>
+<style>
+@font-face
+      {
+        font-family: "Lucida Grande";
+        src:url(lucida.ttf')format("truetype");
+        font-weight: regular; 
+      }
+      .ds{font-family: "Lucida Grande";}
+</style>
+<body>
+<h1 class="ds">hai teja</h1>
 </body>
 </html>
