--- a/exa3.html
+++ b/exa3.html
@@ -168,7 +168,7 @@
 <div class="col-lg-4 text-center">
 <center>
 <div class="circle"style="display:table-cell; vertical-align:middle;text-align:center;">
-<img src="icon_goals@1x.png"width="85"height="86">
+<img src="img/icon_goals@1x.png"width="85"height="86">
 </div>
 <h3>Goals</h3>
 </center>
@@ -176,7 +176,7 @@
 <div class="col-lg-4 text-center">
 <center>
 <div class="circle"style="display:table-cell; vertical-align:middle;text-align:center;">
-<img src="icon_estimate@1x.png"width="99.4"height="67.2">
+<img src="img/icon_estimate@1x.png"width="99.4"height="67.2">
 </div>
 <h3>Estimate your needs</h3>
 </center>
@@ -184,7 +184,7 @@
 <div class="col-lg-4 text-center">
 <center>
 <div class="circle"style="display:table-cell; vertical-align:middle;text-align:center;">
-<img src="icon_chooseplan@1x.png"width="74.8"height="62">
+<img src="img/icon_chooseplan@1x.png"width="74.8"height="62">
 </div>
 <h3>choose your plans</h3>
 </center>
