--- a/exa5.html
+++ b/exa5.html
@@ -57,10 +57,10 @@
       @font-face
       {
         font-family: "Lucida Grande";
-        src:url('lucida.ttf')format("truetype");
+        src:url('fonts/lucida.ttf')format("truetype");
         
       }
-      body{font-family: "Lucida Grande";}
+      .ff{font-family: "Lucida Grande";}
 
   
   .text-vertical-center {
@@ -211,8 +211,8 @@
   </header--> 
    <header id="top" class="heade1">
         <div class="text-vertical-center">
-           <font style="font-size:65px;color:white;">Life is about autonomy</font><br><br>
-            <font style="font-size:22px;color:white;">Real real life stories and see how they are using life insurance.</font>
+           <font class="ff"style="font-size:65px;color:white;">Life insurance is about autonomy</font><br><br>
+            <font class="ff" style="font-size:22px;color:white;">Real real life stories and see how they are using life insurance.</font>
         </div>
     </header>
   <!--home banner ends-->
