--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
       <title>Bootstrap 101 Template</title>
 
       <style type="text/css">
+      
+      span{font-weight:lighter;}
       #banner {
 background-image: linear-gradient( rgba(0, 0, 0, 0.2) 100%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0.8) 75%, rgba(0, 0, 0, 0.8) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
 }
+
       .active1{border-bottom:2px solid #bdd467;}
       .heade1 {
     display: table;
@@ -28,6 +31,7 @@ background-image: linear-gradient( rgba(0, 0, 0, 0.2) 100%, rgba(0, 0, 0, 0) 75%
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+
 }
 .tile2 {
     display: table;
@@ -215,7 +219,7 @@ background-image: linear-gradient( rgba(0, 0, 0, 0.2) 100%, rgba(0, 0, 0, 0) 75%
   </header--> 
    <header id="top banner" class="heade1">
         <div id="banner"class="text-vertical-center">
-           <font class="ff"style="font-size:65px;color:white;line-height:77px;">Life insurance is about autonomy</font><br><br>
+           <font class="ff"style="font-weight:normal;font-size:65px;color:white;line-height:77px;">Life insurance is about autonomy</font><br><br>
             <font class="ff" style="font-size:22px;color:white;">Read real life stories and see how they are using life insurance today.</font>
         </div>
     </header>
