--- a/index.html
+++ b/index.html
@@ -149,11 +149,12 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
         .green2{background-color: #a1be35}       
         .toptitles1
       {
-        
+        font-family: "lucida Grande";
         color: #A8A9AC;
         line-height: 21px;
         font-size:  18px;
-        padding-right:5px;
+        padding-right:10px;
+        padding-left:10px;
 
       }   
       .active
@@ -237,9 +238,9 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
           </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1"style="margin-right:50px;">
+         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1"style="margin-right:0px;">
          <ul class="nav navbar-nav" id="Navigation">
-          <li><a href="index.html"class="active"style="padding-bottom:6px;"><font class="toptitles1">Why Life Insurance?</font></a></li>
+          <li><a href="index.html"class="active"style="padding-bottom:6px;padding-left:2px;padding-right:2px;"><font class="toptitles1">Why Life Insurance?</font></a></li>
           <li><a href="sureify_success.html"><font class="toptitles1">Success Stories</font></a></li>
           <li><a href="#" ><font class="toptitles1">Define Your Story</font></a></li>
           <li><a href="estimate.html"><font class="toptitles1">Estimate Your Needs</font></a></li></ul>
@@ -265,7 +266,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
     </header-->
     <div class="heade1">
      <div id="banner"class="text-vertical-center">
-     <font class="ff"style="font-weight:normal;font-size:65px;color:white;line-height:77px;">Life insurance is about autonomy</font><br><br>
+     <font class="ff"style="font-weight:normal;font-size:65px;color:white;line-height:77px;">Life insurance is about autonomy</font><br>
             <font class="ff" style="font-size:22px;color:white;">Read real life stories and see how they are using life insurance today.</font>
 
      </div>
@@ -276,7 +277,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
   <div class="col-lg-4 col-sm-4 col-md-4">
    <div class="row"> 
      <div class="orange"style="padding-right:0px;padding-left:0px;">
-     <center><br><font class="textbody ff">Title here</font></center><br>
+     <center><br><font class="textbody ff">Title Here</font></center><br>
      </div>
    </div>
    <div class="row">
@@ -289,14 +290,14 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
    </div>
     <div class="row">
      <div class="orange"style="padding-right:0px;padding-left:0px;">
-     <center><br><p class="textbody ff">Lorem ipsum dolor sit amet,consectetur adipidcing elit.Sed interdum et urna a bibendum.Mauris</p></center><br>
+     <center><p class="textbody ff"style="padding-top:20px;padding-bottom:20px;">Lorem ipsum dolor sit amet,<br>consectetur adipidcing elit.Sed interdum<br> et urna a bibendum.Mauris</p></center>
      </div>
    </div>
   </div>
   <div class="col-lg-4 col-sm-4 col-md-4 ">
    <div class="row">
      <div class="blue"style="padding-right:0px;padding-left:0px;">
-     <center><br><font class="textbody ff">Title here</font></center><br>
+     <center><br><font class="textbody ff">Title Here</font></center><br>
      </div>
    </div>
    <div class="row">
@@ -309,14 +310,14 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
    </div>
     <div class="row">
      <div class="blue"style="padding-right:0px;padding-left:0px;">
-     <center><br><p class="textbody ff">Lorem ipsum dolor sit amet,consectetur adipidcing elit.Sed interdum et urna a bibendum.Mauris</p></center><br>
+     <center><p class="textbody ff"style="padding-top:20px;padding-bottom:20px;">Lorem ipsum dolor sit amet,<br>consectetur adipidcing elit.Sed interdum<br> et urna a bibendum.Mauris</p></center>
      </div>
    </div>
   </div>
   <div class="col-lg-4 col-sm-4 col-md-4 ">
    <div class="row">
      <div class="green2"style="padding-right:0px;padding-left:0px;">
-     <center><br><font class="textbody ff">Title here</font></center><br>
+     <center><br><font class="textbody ff">Title Here</font></center><br>
      </div>
    </div>
    <div class="row"style="padding-top:0px;">
@@ -329,7 +330,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
    </div>
     <div class="row">
      <div class="green2"style="padding-right:0px;padding-left:0px;">
-     <center><br><p class="textbody ff">Lorem ipsum dolor sit amet,consectetur adipidcing elit.Sed interdum et urna a bibendum.Mauris</p></center><br>
+     <center><p class="textbody ff"style="padding-top:20px;padding-bottom:20px;">Lorem ipsum dolor sit amet,<br>consectetur adipidcing elit.Sed interdum<br> et urna a bibendum.Mauris</p></center>
      </div>
    </div>
   </div>
@@ -351,8 +352,8 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
            <div class="row">
            <div class="col-lg-1 "></div>
            <div class="col-lg-10">
-          <center>
-          <p class="textbody1 ff">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque neque libero,molestie pulvinar id,vulputate nec mi.Pellentesque sed sapien justo.Donec a lacus a justo placerat pulvinar.In in dul in odio tempus.</p></center>
+          
+          <p class="textbody1 ff"style="font-size:21px;padding-left:0px;padding-right:0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque neque libero,molestie a pulvinar id,vulputate nec mi.Pellentesque sed sapien justo.Donec a lacus a justo placerat pulvinar.In in dul in odio tempus.</p>
           </div>
           <div class="col-lg-1 "></div>
          </div>
