--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
    </div>
     <div class="row">
      <div class="orange"style="padding-right:0px;padding-left:0px;">
-     <center><p class="textbody ff"style="padding-top:25px;padding-bottom:20px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.Sed interdum<br> et urna a bibendum. Mauris.</p></center>
+     <center><p class="textbody ff"style="padding-top:25px;padding-bottom:20px;line-height:26px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.Sed interdum<br> et urna a bibendum. Mauris.</p></center>
      </div>
    </div>
   </div>
@@ -312,7 +312,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
    </div>
     <div class="row">
      <div class="blue"style="padding-right:0px;padding-left:0px;">
-     <center><p class="textbody ff"style="padding-top:25px;padding-bottom:20px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.Sed interdum<br> et urna a bibendum. Mauris.</p></center>
+     <center><p class="textbody ff"style="padding-top:25px;padding-bottom:20px;line-height:26px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.Sed interdum<br> et urna a bibendum. Mauris.</p></center>
      </div>
    </div>
   </div>
@@ -332,7 +332,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
    </div>
     <div class="row">
      <div class="green2"style="padding-right:0px;padding-left:0px;">
-     <center><p class="textbody ff"style="padding-top:25px;padding-bottom:20px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.Sed interdum<br> et urna a bibendum. Mauris.</p></center>
+     <center><p class="textbody ff"style="padding-top:25px;padding-bottom:20px;line-height:26px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.Sed interdum<br> et urna a bibendum. Mauris.</p></center>
      </div>
    </div>
   </div>
@@ -348,14 +348,14 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
         <div class="row text-center">
         
 
-          <font class="ff"style="font-size:65px;color:#a8a9ac;line-height:77px;">Tell us your story</font><br><br>
+          <font class="ff"style="font-size:60px;color:#a8a9ac;line-height:77px;">Tell us your story</font><br><br>
 
           <div class="container-fluid">
            <div class="row">
            <div class="col-lg-1 "></div>
            <div class="col-lg-10">
           
-          <p class="textbody1 ff"style="font-size:21px;padding-left:0px;padding-right:0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque neque libero,molestie a pulvinar id,vulputate nec mi.Pellentesque sed sapien justo.Donec a lacus a justo placerat pulvinar.In in dul in odio tempus.</p>
+          <p class="textbody1 ff"style="font-size:21px;padding-left:0px;padding-right:0px;line-height:26px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque neque libero,molestie a pulvinar id,vulputate nec mi.Pellentesque sed sapien justo.Donec a lacus a justo placerat pulvinar.In in dul in odio tempus.</p>
           </div>
           <div class="col-lg-1 "></div>
          </div>
@@ -367,7 +367,7 @@ background-image: -moz-linear-gradient( rgba(0,0,0,0.2) 100%, rgba(0, 0, 0, 0) 7
 
 <div class="container-fluid">
 <div class="row">
-<div class="col-lg-10 col-lg-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1">
+<div class="col-lg-10 col-lg-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1"style="padding-left:4%;padding-right:4%;">
 <div class="row">
 <div class="col-lg-4 col-md-4  text-center">
 <center>
