--- a/sureify_success.html
+++ b/sureify_success.html
@@ -315,7 +315,7 @@ opacity: 0.9;
           </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1"style="margin-right:50px;">
+         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1"style="margin-right:60px;">
          <ul class="nav navbar-nav" id="Navigation">
           <li><a href="index.html"><font class="toptitles1"style="padding-right:20px;">Why Life Insurance?</font></a></li>
           <li><a href="sureify_success.html"class="active" style="padding-bottom:3px;padding-right:2px;padding-left:5px;"><font class="toptitles1" >Success Stories</font></a></li>
@@ -478,15 +478,15 @@ opacity: 0.9;
 <!--footer-->
 <footer id="my"style="background-color:#343740;">
       <div class="container-fluid"style="padding-right:0px;" >
-        <br></br>
-        <div class="container-fluid">
+        <br>
+        <div class="container-fluid"style="padding-top:10px;padding-bottom:10px;">
         <div class="row">
           <div class="col-lg-3"><center><img src="img/footer_logo@1x.png" class="img-responsive"></center>
           </div> 
           <div class="col-lg-3"></div>
           <div class="col-lg-5">
 
-          <div class="container-fluid"width="465"height="114">
+          <div class="container-fluid"width="465"height="114"style="line-height:26px;">
           <div class="col-lg-4">
             <h4><font  class="footertitletext ff">PRODUCT</font></h4>
             <ul class="list icons list-unstyled">
@@ -519,7 +519,7 @@ opacity: 0.9;
         </div>  
       </div>
       </div>
-      <br>
+      
     </footer>
 
 
